--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation "androidx.navigation:navigation-ui-ktx:2.0.0"
     implementation 'androidx.preference:preference-ktx:1.1.0-rc01'
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
